--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -111,7 +111,7 @@
         .code-box-in .has-code {
             background-position: center;
             -webkit-background-size: contain;
-            background-size: 100%;
+            background-size: contain;
             background-repeat: no-repeat;
         }
         .code-box-in .has-code .code-mask{
