--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -15,9 +15,16 @@
     <p>{{item.title}}" <div>{{item.tag_list}}</div></p>
   </div>
   <div class="homepage-p">
-    <p><a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
-      {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
-    </a>
+    <p>
+      {% if item.user_info.usertype == 1 %}
+      <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'case='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+        {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
+      </a>
+      {% elif item.user_info.usertype == 2 %}
+        <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+          {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
+        </a>
+      {% endif %}
     </p>
   </div>
   <ul class="homepage-li">
