--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -33,8 +33,8 @@
           {% if user.weixin_qrcode %}
           <li class="weixin_ewm weixin-slide">
             <img src="{{helper.cdnhost}}/assets/img/weixin_slide.png" alt="" class="quick-img" style="height: 22px;margin-top: 3px;">
-            <div class="weixin-slide-img">
-              <img src="{{user.weixin_qrcode}}" alt="">
+            <div class="weixin-slide-img" style="background-image: url('{{user.weixin_qrcode}}');background-size: contain;background-repeat: no-repeat;background-position: center">
+
             </div>
           </li>
           {% else %}
@@ -45,8 +45,8 @@
           {% if user.qq_qrcode %}
           <li class="weixin_ewm qq-slide">
             <img src="{{helper.cdnhost}}/assets/img/qq_slide.png" alt="" class="quick-img">
-            <div class="qq-slide-img">
-              <img src="{{user.qq_qrcode}}" alt="">
+            <div class="qq-slide-img" style="background-image: url('{{user.qq_qrcode}}');background-size: contain;background-repeat: no-repeat;background-position: center">
+
             </div>
           </li>
           {% else %}
