--- a/views/index.html
+++ b/views/index.html
@@ -51,14 +51,14 @@
     <div class="lunbo_right">
      {# {% include "widget/xSlider/xSlider2.html" %}  #}
       <ul id="lunbo1">
-        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}"></a></li>
-        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}"></a></li>
-        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}"></a></li>
-        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}"></a></li>
-        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}"></a></li>
-        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}"></a></li>
-        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}"></a></li>
-        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}"></a></li>
+        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}3"></a></li>
+        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}4"></a></li>
+        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}1"></a></li>
+        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}2"></a></li>
+        <li><a href="{{xSlider2[2].linkurl}}" data-pid="{{xSlider2[2].pid}}"><img src="{{ xSlider2[2].imageurl }}" alt="{{xSlider2[2].alt}}3"></a></li>
+        <li><a href="{{xSlider2[3].linkurl}}" data-pid="{{xSlider2[3].pid}}"><img src="{{ xSlider2[3].imageurl }}" alt="{{xSlider2[3].alt}}4"></a></li>
+        <li><a href="{{xSlider2[0].linkurl}}" data-pid="{{xSlider2[0].pid}}"><img src="{{ xSlider2[0].imageurl }}" alt="{{xSlider2[0].alt}}1"></a></li>
+        <li><a href="{{xSlider2[1].linkurl}}" data-pid="{{xSlider2[1].pid}}"><img src="{{ xSlider2[1].imageurl }}" alt="{{xSlider2[1].alt}}2"></a></li>
       </ul>
     </div>
   </div>
@@ -321,13 +321,12 @@
       var lunbotimer = null;
       var num = 0;
       lunbotimer = setInterval(function () {
-          num++;
           if (num == 3) {
-              $("#lunbo1").css({top: (-270) + 'px'})
+              $("#lunbo1").css({top: (-0) + 'px'})
               num = 0;
           }else {
               num++;
-              $("#lunbo1").animate({top:-270*num+(-270)+'px'})
+              $("#lunbo1").animate({top:-270*num+'px'})
           }
       }, 2000)
   })
