--- a/views/widget/top/top.css
+++ b/views/widget/top/top.css
@@ -1,7 +1,8 @@
 .top{
   width:100%;
   height: 30px;
-  border-bottom-color: #dcdcdc 1px solid;
+  border-bottom: #dcdcdc 1px solid;
+  background: #fff;
   font-size: 12px;
   color:#666666;
 }
