渲染猜你喜欢模板

--- a/views/widget/advisor_star/advisor_star_cell.html
+++ b/views/widget/advisor_star/advisor_star_cell.html
@@ -34,7 +34,7 @@
 <ul class="gw-list">
     <li>
         <a href="javascript::">
-            <img src="https://imgsa.baidu.com/news/q%3D100/sign=e8fe84bc8e26cffc6f2abbb289004a7d/a1ec08fa513d26970655fa7859fbb2fb4316d815.jpg" alt="">
+            <img src="../assets/img/profile3.jpg" alt="">
             <div class="artical-info">
                 <div class="user-infos">
                     <span class="people-name">张三</span>
