--- a/views/release_article.html
+++ b/views/release_article.html
@@ -85,11 +85,11 @@
             </div>
             <div class="rel-case-text1" style="margin-top: 20px;">
               <label class="title active" for="art_type"><span>*</span> 选择文章类型：</label>
-              <span  class="art-type-sel" >
+              <span  class="art-type-sel" data-id ="2" >
                 <i class="iconfont art-type-i"></i>
                 <i >时讯</i>
               </span>
-              <span class="art-type-sel">
+              <span class="art-type-sel" data-id="1">
                 <i class="iconfont art-type-i" ></i>
                 <i >非时讯</i>
               </span>
@@ -113,7 +113,7 @@
               </span>
               <span class="level-sel">
                 <i class="level-sel-i iconfont"></i>
-                <i>研究生</i>
+                <i>博士</i>
               </span>
                <span class="numTip" style="display: block;margin-left: 128px;">
                   学历标签可多选
@@ -123,33 +123,33 @@
               <label class="title active" for="recommend">
                 <span>*</span> 选择推荐标签：
               </label>
-              <span class="recommend-sel" data-id="11">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>留学聚焦</i>
               </span>
-              <span class="recommend-sel" data-id="12">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>申请攻略</i>
               </span>
-              <span class="recommend-sel" data-id="13">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>签证指导</i>
               </span>
-              <span class="recommend-sel" data-id="14">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>申请条件</i>
               </span>
-              <span class="recommend-sel" data-id="15">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>留学费用</i>
               </span>
-              <span class="recommend-sel" data-id="16">
-                <i class="recommend-sel-i iconfont"></i>
+              <span class="recommend-sel" >
+                <i class="level-sel-i iconfont"></i>
                 <i>专家解读</i>
               </span>
-              <span class="recommend-sel" data-id="17" style="display: inline-block;
+              <span class="recommend-sel" style="display: inline-block;
     margin-left: 130px;">
-                <i class="recommend-sel-i iconfont"></i>
+                <i class="level-sel-i iconfont"></i>
                 <i>留学案例</i>
               </span>
               <span class="numTip">
@@ -245,7 +245,7 @@
       //选择文章类型
       var newsletterType = null;
       $(".art-type-sel").on("click",function(){
-        newsletterType = $(this).index();
+        newsletterType = $(this).attr('data-id');
         $('.art-type-i').html('').css({'border':'1px solid #333','color':'none','marginRight':'5px','fontSize':'14px'});
         $('.art-type-i').next().css({'color':'#333'});
         $(this).find('.art-type-i').html('&#xe626;').css({'border':'none','color':'#c13232','marginRight':'7px','fontSize':'16px'});
@@ -276,14 +276,14 @@
       $('.recommend-sel').on('click',function(){
         if($(this).attr('checked')){
           // console.log('false');
-          $(this).find('.recommend-sel-i').css({'border':'1px solid #333','color':'none','marginRight':'5px','fontSize':'14px'}).html('');
-          $(this).find('.recommend-sel-i').next().css({'color':'#333'});
+          $(this).find('.level-sel-i').css({'border':'1px solid #333','color':'none','marginRight':'5px','fontSize':'14px'}).html('');
+          $(this).find('.level-sel-i').next().css({'color':'#333'});
           $(this).attr('checked',false);
         }else{
           // console.log('true')
           if(recNumber<3){
-            $(this).find('.recommend-sel-i').css({'border':'none','color':'#c13232','marginRight':'7px','fontSize':'16px'}).html('&#xe640;');
-            $(this).find('.recommend-sel-i').next().css({'color':'#c13232'});
+            $(this).find('.level-sel-i').css({'border':'none','color':'#c13232','marginRight':'7px','fontSize':'16px'}).html('&#xe640;');
+            $(this).find('.level-sel-i').next().css({'color':'#c13232'});
             $(this).attr('checked',true);
           }
         }
@@ -357,16 +357,13 @@
         }else{
         	 $("#apply-country").next().html('');
         } 
+        //判断文章类型
         if(newsletterType ==undefined){
           layer.msg('请选择文章类型');
           return false;
         }else{
           if(newsletterType==1){
-            //选择时讯
-            var is_news =2;
-          }else{
             //选择非时讯
-            is_news =1 ;
             //判断学历
             var eduList = '';
             $('.level-sel[checked=checked]').each(function(){
@@ -424,7 +421,7 @@
             type:artType,
             introduce:$.trim($("#art_abs").val()),
             edu_id:eduStr,
-            is_news:is_news,
+            is_news:newsletterType,
             tag_list:newTagStr,
             is_immi:1
           },
@@ -460,17 +457,14 @@
         }else{
           $("#apply-country").next().html('');
         }
+        //判断文章类型
         if(newsletterType ==undefined){
           layer.msg('请选择文章类型');
           return false;
         }else{
           if(newsletterType==1){
-            //选择时讯
-            var is_news =2;
-          }else{
             //选择非时讯
-            is_news =1 ;
-            //判断学历
+             //判断学历
             var eduList = '';
             $('.level-sel[checked=checked]').each(function(){
               eduList+=$(this).find('i').eq(1).text()+',';
@@ -526,7 +520,7 @@
             type:artType,
             introduce:$.trim($("#art_abs").val()),
             edu_id:eduStr,
-            is_news:is_news,
+            is_news:newsletterType,
             tag_list:newTagStr,
             is_immi:1
           },
