搜索页面轮播

--- a/views/so_article.html
+++ b/views/so_article.html
@@ -7,13 +7,24 @@
     .banner-box{
         margin-top: 20px;
         height: 130px;
-        background-color: yellow;
+        /*background-color: yellow;*/
     }
     .banner-box-left{
-        position: relative;
+        background: #dcdcdc;
+        height: 130px;
     }
     .banner-box-right{
-        position: relative;
+        background: #dcdcdc;
+        height: 130px;
+    }
+    .slider .slider-dot ul{
+        left:97%;
+    }
+    .slider .slider-dot ul li{
+        border-radius: 50%;
+    }
+    .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
+        margin-top: -33px
     }
     .main-left{
         padding: 20px 20px 0;
