关于我们页面引入侧边栏

--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -171,7 +171,7 @@
 {# 地图页面 #}
 
 {% include "widget/new_footer/new_footer.html" %}
-{% import "widget/slide/slide.html" as  slide %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_CONTACT_SEAT10") }}
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
