--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -43,7 +43,7 @@
   {{ culture.culture(jinseliliang.list,helper) }}
 </div>
 {% include "widget/new_footer/new_footer.html" %}
-{% import "widget/slide/slide.html" as  slide %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_CULTURE_SEAT10") }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
