--- a/views/about/events.html
+++ b/views/about/events.html
@@ -35,7 +35,7 @@
 
 
 {% include "widget/new_footer/new_footer.html" %}
-{% import "widget/slide/slide.html" as  slide %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("AD_EVENTS_SEAT10") }}
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
