--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -5,12 +5,44 @@
   <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper2.7.6.css" >
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/guwen_yonghu.css" >
   <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper2.7.6.js"></script>
+  <style>
+    .banner-box{
+      margin-top: 20px;
+      height: 130px;
+      /*background-color: yellow;*/
+    }
+    .banner-box-left{
+      background: #dcdcdc;
+      height: 130px;
+    }
+    .banner-box-right{
+      background: #dcdcdc;
+      height: 130px;
+    }
+    .slider .slider-dot ul{
+      left:97%;
+    }
+    .slider .slider-dot ul li{
+      border-radius: 50%;
+    }
+    .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
+      margin-top: -33px
+    }
+    .main-left{
+      padding: 20px 20px 0;
+    }
+  </style>
 </head>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
-{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-{{ nav_seventh.nav_seventh(route,tdk.cityid,helper) }}
-<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_{% if userinfo.usertype == 2 %}ADVISOR{% elif userinfo.usertype == 3 %}CANZAN{% endif %}_P_MAIN_SEAT1"></div>
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
+<div class="dui-layout-lg clearfix banner-box">
+  <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
+  <div class="dui-layout-div"></div>
+  <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
+</div>
+{#<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_{% if userinfo.usertype == 2 %}ADVISOR{% elif userinfo.usertype == 3 %}CANZAN{% endif %}_P_MAIN_SEAT1"></div>#}
 <div class="dui-layout-lg clearfix">
   <div class="dui-layout-silde right">
     <div class="clearfix" style="margin-top: 20px">
@@ -77,9 +109,10 @@
     login_ss = JSON.parse($.cookie('login_ss'));  
   }
 </script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
+<!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
@@ -88,6 +121,25 @@
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script>
   $(function(){
+      $('.banner-box-left .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+          current: 0,
+          speed: 500,
+          intervalTime: 5000,
+          pagination: true
+      });
+      $('.banner-box-right .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+          current: 0,
+          speed: 1000,
+          intervalTime: 5000,
+          slidesPerView : 2,
+          slidesPerGroup : 2,
+//          pagination: true
+      });
     //明星顾问轮播
     function appendArticleItem (aitem) {
       var aItemHtml = '<div class="homepage">'+
