--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -2,12 +2,12 @@
 <div class="homepage">
   <div class="homepagecon">
     <div class="homepageing" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
-    <h3>{{item.user_info.realname}}<img src="../assets/img/1v.png" alt=""></h3>
+    <h3>{{item.user_info.realname}}<img src="{{helper.cdnhost}}/assets/img/1v.png" alt=""></h3>
     <ul>
-      <li class="share-btn"><img src="../assets/img/wx.png" alt=""></li>
-      <li class="share-btn"><img src="../assets/img/pyq.png" alt=""></li>
-      <li class="share-btn"><img src="../assets/img/xl.png" alt=""></li>
-      <li class="share-btn"><img src="../assets/img/qq.png" alt=""></li>
+      <li class="share-btn"><img src="{{helper.cdnhost}}/assets/img/wx.png" alt=""></li>
+      <li class="share-btn"><img src="{{helper.cdnhost}}/assets/img/pyq.png" alt=""></li>
+      <li class="share-btn"><img src="{{helper.cdnhost}}/assets/img/xl.png" alt=""></li>
+      <li class="share-btn"><img src="{{helper.cdnhost}}/assets/img/qq.png" alt=""></li>
       <li class="report-btn" style="color: #666;font-size: 12px">举报</li>
     </ul>
   </div>
@@ -15,16 +15,9 @@
     <p>{{item.title}}" <div>{{item.tag_list}}</div></p>
   </div>
   <div class="homepage-p">
-    <p>
-      {% if item.user_info.usertype == 1 %}
-      <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'case='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
-        {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
-      </a>
-      {% elif item.user_info.usertype == 2 %}
-        <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
+    <p><a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
           {{item.introduce}} <span style="color: #C13232">【查看详情】</span>
         </a>
-      {% endif %}
     </p>
   </div>
   <ul class="homepage-li">
