--- a/views/release_article.html
+++ b/views/release_article.html
@@ -217,9 +217,9 @@
   <script >
     $(function(){
       var city_id =null;
-      login_ss ={};
-      login_ss.uid =1605;
-      login_ss.usertype=2;
+      // login_ss ={};
+      // login_ss.uid =1605;
+      // login_ss.usertype=2;
       if(login_ss.usertype ==2){
         //获取顾问的组织id
         city_id = $(".advisor-bumen").attr("data-cityId");
