--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -88,8 +88,8 @@
     </div>
   </div>
 </div>
-{% import "widget/slide/slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+{% import "widget/new_slide/new_slide2.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
   var login_ss = null; 
