--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -114,8 +114,8 @@
       </div>
     </div>
   </div>
-  {% import "widget/slide/slide.html" as  slide %}
-  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+  {% import "widget/new_slide/new_slide2.html" as  slide %}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
   {% include 'widget/new_footer/new_footer.html' %}
   <div>
     <input type="hidden" id="detail_catid" value="{{catid}}"/>
