--- a/views/so_article.html
+++ b/views/so_article.html
@@ -242,8 +242,10 @@
     </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
-{% import "widget/new_slide/new_slide2.html" as  slide %}
-{{slide.leyu_slide("AD_BRANCH_HOME_SEAT10") }}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+<script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
